update rerolls